feat: retrieve order by table id
