# docs/swagger.json
@@ -1284,6 +1284,17 @@
                 "time"
               ]
             }
+          },
+          {
+            "name": "tableID",
+            "in": "query",
+            "description": "Filter the orders by table ID",
+            "required": false,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "number"
+            }
           }
         ],
         "responses": {
